--- a/CloudflareDynDNS/CloudflareDynDNS.csproj
+++ b/CloudflareDynDNS/CloudflareDynDNS.csproj
@@ -65,11 +65,11 @@
     </Compile>
     <Compile Include="Dns.cs" />
     <Compile Include="SelectedDnsEntries.cs" />
-    <Compile Include="Settings.cs">
+    <Compile Include="frmSettings.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Settings.Designer.cs">
-      <DependentUpon>Settings.cs</DependentUpon>
+    <Compile Include="frmSettings.Designer.cs">
+      <DependentUpon>frmSettings.cs</DependentUpon>
     </Compile>
     <Compile Include="Utility.cs" />
     <Compile Include="Zone.cs" />
@@ -88,8 +88,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Settings.resx">
-      <DependentUpon>Settings.cs</DependentUpon>
+    <EmbeddedResource Include="frmSettings.resx">
+      <DependentUpon>frmSettings.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config" />
