--- a/DnsTube/DnsTube.csproj
+++ b/DnsTube/DnsTube.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{27A037D8-3354-499C-8640-ED489D996A48}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>CloudflareDynDNS</RootNamespace>
-    <AssemblyName>CloudflareDynDNS</AssemblyName>
+    <RootNamespace>DnsTube</RootNamespace>
+    <AssemblyName>DnsTube</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
