Add update check

--- a/.gitignore
+++ b/.gitignore
@@ -327,4 +327,4 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
-/DnsTube/App.SECRETS.config
+/Release instructions.txt
