--- a/DnsTube/DnsTube.csproj
+++ b/DnsTube/DnsTube.csproj
@@ -68,7 +68,6 @@
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
     </Reference>
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=4.0.5.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.4.7.0\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
@@ -137,6 +136,7 @@
     <Compile Include="frmSettings.Designer.cs">
       <DependentUpon>frmSettings.cs</DependentUpon>
     </Compile>
+    <Compile Include="GithubRelease.cs" />
     <Compile Include="MyTelemetryInitializer.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="TaskScheduler.cs" />
@@ -161,9 +161,6 @@
       <DependentUpon>frmSettings.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
-    <None Include="App.SECRETS.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
     <None Include="ApplicationInsights.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
