--- a/DnsTube/DnsTube.csproj
+++ b/DnsTube/DnsTube.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net5.0-windows</TargetFramework>
 		<UseWindowsForms>true</UseWindowsForms>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<PublishTrimmed>true</PublishTrimmed>
@@ -17,9 +17,6 @@
 		<DefineConstants>$(PORTABLE)</DefineConstants>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json">
-			<Version>12.0.3</Version>
-		</PackageReference>
 		<PackageReference Include="System.Buffers">
 			<Version>4.5.0</Version>
 		</PackageReference>
