--- a/DnsTube/DnsTube.csproj
+++ b/DnsTube/DnsTube.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>icon-48.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,7 +19,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="icon-48.ico" />
+    <PackageReference Include="Hardcodet.NotifyIcon.Wpf.NetCore" Version="1.0.18" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="icon-48.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
