--- a/DnsTube/DnsTube.csproj
+++ b/DnsTube/DnsTube.csproj
@@ -7,6 +7,13 @@
     <ApplicationIcon>icon-48.ico</ApplicationIcon>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;$(PORTABLE)</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>$(PORTABLE)</DefineConstants>
+  </PropertyGroup>
+	
   <ItemGroup>
     <Compile Remove="NewFolder\**" />
     <EmbeddedResource Remove="NewFolder\**" />
