--- a/DnsTube/DnsTube.Gui.csproj
+++ b/DnsTube/DnsTube.Gui.csproj
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;$(PORTABLE)</DefineConstants>
+    <DefineConstants>TRACE;$(PORTABLE);$(SERVICE)</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(PORTABLE)</DefineConstants>
+    <DefineConstants>$(PORTABLE);$(SERVICE)</DefineConstants>
   </PropertyGroup>
 	
   <ItemGroup>
@@ -33,6 +33,10 @@
     <Content Include="icon-48.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DnsTube.Core\DnsTube.Core.csproj" />
   </ItemGroup>
 
 </Project>
