--- a/DnsTube/DnsTube.Gui.csproj
+++ b/DnsTube/DnsTube.Gui.csproj
@@ -5,14 +5,16 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
     <ApplicationIcon>icon-48.ico</ApplicationIcon>
+    <Nullable>enable</Nullable>
+    <DebugType>none</DebugType>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>TRACE;$(PORTABLE);$(SERVICE)</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(PORTABLE);$(SERVICE)</DefineConstants>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DefineConstants>TRACE;$(PORTABLE);$(SERVICE)</DefineConstants>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<DefineConstants>$(PORTABLE);$(SERVICE)</DefineConstants>
+	</PropertyGroup>
 	
   <ItemGroup>
     <Compile Remove="NewFolder\**" />
