--- a/DnsTube.Service/ClientApp/package.json
+++ b/DnsTube.Service/ClientApp/package.json
@@ -1,24 +1,27 @@
 {
-  "name": "dnstube",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "build": "tsc && vite build",
-    "watch": "tsc && vite build --watch"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.3",
-    "path": "^0.12.7",
-    "sass": "^1.55.0",
-    "typescript": "^4.6.4",
-    "vite": "^4.0.1"
-  },
-  "dependencies": {
-    "@picocss/pico": "^1.5.6",
-    "date-fns": "^2.29.3",
-    "linkify-html": "^4.0.2",
-    "linkifyjs": "^4.0.2",
-    "three-dots": "^0.3.2"
-  }
+	"name": "dnstube",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"build": "tsc && vite build",
+		"watch": "tsc && vite build --watch"
+	},
+	"devDependencies": {
+		"@types/node": "^18.11.3",
+		"path": "^0.12.7",
+		"sass": "^1.55.0",
+		"typescript": "^4.6.4",
+		"vite": "^4.0.1"
+	},
+	"dependencies": {
+		"@picocss/pico": "^1.5.6",
+		"date-fns": "^2.29.3",
+		"linkify-html": "^4.0.2",
+		"linkifyjs": "^4.0.2",
+		"three-dots": "^0.3.2",
+		"@fortawesome/fontawesome-free": "^6.2.1",
+		"@fortawesome/fontawesome-svg-core": "^6.2.1",
+		"@fortawesome/free-solid-svg-icons": "^6.2.1"
+	}
 }
