--- a/DnsTube.Service/ClientApp/package.json
+++ b/DnsTube.Service/ClientApp/package.json
@@ -15,13 +15,13 @@
 		"vite": "^4.0.1"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.2.1",
+		"@fortawesome/fontawesome-svg-core": "^6.2.1",
+		"@fortawesome/free-solid-svg-icons": "^6.2.1",
 		"@picocss/pico": "^1.5.6",
 		"date-fns": "^2.29.3",
 		"linkify-html": "^4.0.2",
 		"linkifyjs": "^4.0.2",
-		"three-dots": "^0.3.2",
-		"@fortawesome/fontawesome-free": "^6.2.1",
-		"@fortawesome/fontawesome-svg-core": "^6.2.1",
-		"@fortawesome/free-solid-svg-icons": "^6.2.1"
+		"three-dots": "^0.3.2"
 	}
 }
