--- a/DnsTube.Service/ClientApp/package.json
+++ b/DnsTube.Service/ClientApp/package.json
@@ -21,6 +21,7 @@
 		"@picocss/pico": "^1.5.6",
 		"date-fns": "^2.29.3",
 		"linkify-html": "^4.0.2",
+		"linkify-plugin-ip": "^4.0.2",
 		"linkifyjs": "^4.0.2",
 		"three-dots": "^0.3.2"
 	}
